results/SpecGenBench/0-shot/log-NumberOfCutsSeq-2023_11_28_23_45_03.txt
class NumberOfCutsSeq {
    //@ requires n >= 0;
    //@ ensures \result >= 0;
    public int numberOfCuts(int n) {
        //@ assert n >= 0;
        //@ assert \result >= 0;
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:6: error: A \result expression may not be in a assert clause
        //@ assert \result >= 0;
                    ^
1 error

